--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "kutty link",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
-    "dev":"nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kuttyselva",
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
+    "monk": "^7.0.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1"
   }
